@@ -26,3 +26,6 @@ solrPath = /solr/
 
   # cat=basic//70; type=boolean; label= Use curl HTTP transport
 solrUseCurl = 0
+
+  # cat=basic//80; type=boolean; label= Log Tika calls
+logging = 0
