@@ -1,3 +1,7 @@
+2011-12-02  Ingo Renner  <ingo@typo3.org>
+
+	* Added logging in all services
+
 2011-10-27  Ingo Renner  <ingo@typo3.org>
 
 	* Added support for text extraction from zip files
